auth et UserConnectionController tests ok